# phdmd

./: .gitignore  create_h2_norm_plots.py  pyproject.toml
src/GillisSharma18/: BCDEx2_204.mat  BCDEx2_406.mat  MSD_DH_system.py  PHformLMIs.py  compareINIT.py  getsystem.py  local_stablePassiveFGM.py  test_Example1.py  test_Example2.py  test_Example3.py
src/phdmd/: config.py  known_interconnection.py  main.py  oi_attempt.py  reduction.py  test_Riccatti_transform.py
src/phdmd/algorithm/: cvxabcd.py  cvxabcdph.py  cvxabcdpr.py  cvxph.py  hamiltonian_identification.py  methods.py  phdmd.py  phdmdh.py  skew_cvx.py  spsd_procrustes.py  stablePassiveFGM.py
src/phdmd/data/: generate.py
src/phdmd/discretization/: discretization.py  reprojection.py
src/phdmd/evaluation/: evaluation.py  result.py
src/phdmd/linalg/: definiteness.py  passivity.py
src/phdmd/model/: msd.py  msd_rettberg.py
src/phdmd/utils/: gillis_options.py  modal_properties.py  plotting.py  postprocess_data.py  preprocess_data.py  reprojection.py  system.py
