[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phdmd"
version = "2.0.0"
authors = [
  { name="Jonas Nicodemus", email="jonas.kneifl@itm.uni-stuttgart.com" },
  { name="Riccardo Morandin", email="morandin@math.tu-berlin.de" },
  { name="Benjamin Unger", email="benjamin.unger@simtech.uni-stuttgart.de" },
]
description = "Port-Hamiltonian Dynamic Mode Decomposition (PHDMD) is a Python package for the identifaction of linear port-Hamiltonian systems through DMD."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.6.3",
    "numpy>=1.24.2",
    "pymor>=2022.2.0",
    "scipy>=1.10.0",
    "slycot==0.5.3",
    "tqdm>=4.64.1",
]
keywords = [
    "dynamic mode decomposition",
    "structure-preserving model order reduction",
    "system identification",
    "surrogate modeling",
    "reduced order models",
    "port-Hamiltonian systems"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["phdmd"]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/Jonas-Nicodemus/phdmd"
Issues = "https://github.com/Jonas-Nicodemus/phdmd/issues"
